Finished user unit tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-one:
+valid_user:
   id: 1
-two:
+  screen_name: millikan
+  email: ram@example.com
+  password: electron
+invalid_user:
   id: 2
+  screen_name: aa/noyes
+  email: anoyes@example,com
+  password: sun
