--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@
 development:
   adapter: mysql
   database: rails_space_development
-  username: root
-  password:
+  username: rails_space
+  password: R@ils$pace
   socket: /tmp/mysql.sock
 
 # Warning: The database defined as 'test' will be erased and
@@ -24,13 +24,13 @@ development:
 test:
   adapter: mysql
   database: rails_space_test
-  username: root
-  password:
+  username: rails_space
+  password: R@ils$pace
   socket: /tmp/mysql.sock
 
 production:
   adapter: mysql
   database: rails_space_production
-  username: root
-  password: 
+  username: rails_space
+  password: R@ils$pace
   socket: /tmp/mysql.sock
